--- a/index12.html
+++ b/index12.html
@@ -63,8 +63,8 @@
                     <p>End of content.</p> -->
                 </section>
                 <section id="buttonContainer">
-                    <a href="index9.html">BACK</a>
-                    <a href="index11.html">CONTINUE</a>
+                    <a href="index11.html">BACK</a>
+                    <a href="index.html">CONTINUE</a>
                 </section>
         </div>
 
