--- a/index13.html
+++ b/index13.html
@@ -14,32 +14,31 @@
         <!-- <div class="timeline"></div> -->
         <div class="timeline"></div>
 
-        <h1
-        data-0="display: none"
-        data-2000="display: block; font-size: 16px"
-        data-4000="font-size: 72px"
-        class="fixedH1">MAKING MAD STACKS</h1>
-
-        <div id="trafficJam">
-            <div 
-            data-0="transform: translateY(-700px)"
-            data-2000="transform: translateY(-30px)"
-            class="stacker"></div>
-
-            <div 
-            data-0="transform: translateY(-700px)"
-            data-1500="transform: translateY(-20px)"
-            class="stacker"></div>
-
-            <div 
-            data-0="transform: translateY(-700px)"
-            data-1000="transform: translateY(-10px)"
-            class="stacker"></div>
-
-            <div 
-            data-0="transform: translateY(-700px)"
-            data-500="transform: translateY(0px)"
-            class="stacker"></div>
+        <div id="wordContainer">
+            <h1
+            data-0="transform: rotate(0deg)"
+            data-4000="transform: rotate(360deg)"
+            >R</h1>
+            <h1
+            data-0="transform: rotate(10deg)"
+            data-4000="transform: rotate(370deg)"
+            >O</h1>
+            <h1
+            data-0="transform: rotate(20deg)"
+            data-4000="transform: rotate(380deg)"
+            >T</h1>
+            <h1
+            data-0="transform: rotate(30deg)"
+            data-4000="transform: rotate(390deg)"
+            >A</h1>
+            <h1
+            data-0="transform: rotate(40deg)"
+            data-4000="transform: rotate(400deg)"
+            >T</h1>
+            <h1
+            data-0="transform: rotate(50deg)"
+            data-4000="transform: rotate(410deg)"
+            >E</h1>
         </div>
 
         <div class="container">
@@ -63,8 +62,8 @@
                     <p>End of content.</p> -->
                 </section>
                 <section id="buttonContainer">
-                    <a href="index11.html">BACK</a>
-                    <a href="index13.html">CONTINUE</a>
+                    <a href="index12.html">BACK</a>
+                    <a href="index14.html">CONTINUE</a>
                 </section>
         </div>
 
